--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -3,21 +3,17 @@ on:
   push:
     branches: [master]
     paths-ignore:
-      [
-        docs/**,
-        charts/**,
-        .github/workflows/build-compiler-*.yml,
-        .github/workflows/build-deploy-*.yml,
-      ]
+      - "docs/**"
+      - "charts/**"
+      - ".github/workflows/build-compiler-*.yml"
+      - ".github/workflows/build-deploy*.yml"
   pull_request:
     branches: [master]
     paths-ignore:
-      [
-        docs/**,
-        charts/**,
-        .github/workflows/build-compiler-*.yml,
-        .github/workflows/build-deploy-*.yml,
-      ]
+      - "docs/**"
+      - "charts/**"
+      - ".github/workflows/build-compiler-*.yml"
+      - ".github/workflows/build-deploy*.yml"
 
 jobs:
   e2e:
