--- a/.github/workflows/build-compiler-master.yml
+++ b/.github/workflows/build-compiler-master.yml
@@ -6,20 +6,15 @@ on:
       - master
     paths:
       - ".github/workflows/build-compiler-master.yml"
-      - "compiler/tools/*"
-      - "compiler/tools/yaml-tools/*"
-      - "compiler/tools/helm-template/*"
-      - "compiler/tools/helm-lib/*"
-      - "compiler/base-compiler.Dockerfile"
+      - "compiler/tools/**"
+      - "compiler/base-compiler-bullseye.Dockerfile"
   pull_request:
     branches:
       - master
     paths:
       - ".github/workflows/build-compiler-master.yml"
-      - "compiler/tools/*"
-      - "compiler/tools/helm-template/*"
-      - "compiler/tools/helm-lib/*"
-      - "compiler/base-compiler.Dockerfile"
+      - "compiler/tools/**"
+      - "compiler/base-compiler-bullseye.Dockerfile"
 
 jobs:
   build:
@@ -41,7 +36,9 @@ jobs:
           push: true
           tags: tarscloud/base-compiler-bullseye:latest
           file: base-compiler-bullseye.Dockerfile
-          build-args: BRANCH=master,TARS_SSL=OFF
+          build-args: |
+            BRANCH=master
+            TARS_SSL=OFF
           platforms: linux/amd64,linux/arm64
 
   build-ssl:
@@ -63,7 +60,9 @@ jobs:
           push: true
           tags: tarscloud/base-compiler-bullseye-ssl:latest
           file: base-compiler-bullseye.Dockerfile
-          build-args: BRANCH=master,TARS_SSL=ON
+          build-args: |
+            BRANCH=master
+            TARS_SSL=ON
           platforms: linux/amd64,linux/arm64
       # - name: Build docker
       #   run: cd compiler && docker buildx build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:latest --build-arg BRANCH=master --platform=linux/amd64,linux/arm64 --push
