Use buildx for cross-platform image build

--- a/context/tarsconfig/Dockerfile
+++ b/context/tarsconfig/Dockerfile
@@ -2,4 +2,7 @@ ARG REGISTRY_URL
 ARG BUILD_VERSION
 FROM $REGISTRY_URL/tars.cppbase:$BUILD_VERSION
 ENV ServerType=cpp
-COPY /root /
+ARG BINARY
+ARG TARGETOS
+ARG TARGETARCH
+COPY /binary/${BINARY}_${TARGETOS}_${TARGETARCH} /usr/local/server/bin/${BINARY}
