--- a/context/tarsnode/Dockerfile
+++ b/context/tarsnode/Dockerfile
@@ -1,6 +1,9 @@
 ARG REGISTRY_URL
 ARG BUILD_VERSION
 FROM $REGISTRY_URL/tars.cppbase:$BUILD_VERSION
-ENV ServerType=cpp
+ARG BINARY
+ARG TARGETOS
+ARG TARGETARCH
 COPY /root /
+COPY /binary/${BINARY}_${TARGETOS}_${TARGETARCH} /${BINARY}/bin/${BINARY}
 RUN chmod +x /bin/entrypoint.sh
