--- a/context/tarsweb/Dockerfile
+++ b/context/tarsweb/Dockerfile
@@ -1,11 +1,4 @@
-FROM node:lts-bullseye As First
-COPY root /
-RUN chmod +x /root/usr/local/tars/cpp/tools/tars2case
-RUN chmod +x /root/bin/entrypoint.sh
-RUN cd /root/tars-web &&rm -rf .git && rm -rf package-lock.json && npm install
-
 FROM node:lts-bullseye
-COPY --from=First /root /
 
 ENV LANG C.UTF-8
 ENV LANGUAGE C.UTF-8
@@ -27,5 +20,7 @@ RUN rm -rf /bin/ls                                                              
     && rm -rf /etc/localtime
 # /etc/localtime will block container mount /etc/localtime from host
 
-RUN npm install -g pm2
+COPY /root /
+RUN cd /tars-web && rm -rf .git && rm -rf package-lock.json && npm install -g pm2 && npm install
+RUN chmod +x /bin/entrypoint.sh
 CMD ["/bin/entrypoint.sh"]
