fix binary file dir

--- a/context/tarsconfig/Dockerfile
+++ b/context/tarsconfig/Dockerfile
@@ -14,4 +14,4 @@ RUN case ${TARGETPLATFORM} in \
 FROM $REGISTRY_URL/tars.cppbase:$BUILD_VERSION
 ENV ServerType=cpp
 ARG BINARY
-COPY --from=0 /binary/${BINARY} /usr/local/app/tars/${BINARY}/bin/${BINARY}
+COPY --from=0 /binary/${BINARY} /usr/local/server/bin/${BINARY}
