--- a/.github/workflows/charts.yml
+++ b/.github/workflows/charts.yml
@@ -34,10 +34,10 @@ jobs:
           echo ::set-output name=BUILD_VERSION::${GITHUB_REF/refs\/tags\//}
 
       - name: Build TarsController Chart
-        run: make chart.controller CHART_VERSION=${{ steps.chart-version.outputs.CHART_VERSION }} BUILD_VERSION=${{ steps.build-version.outputs.BUILD_VERSION }}
+        run: make chart.controller CHART_VERSION=${{ steps.chart-version.outputs.CHART_VERSION }} BUILD_VERSION=${{ steps.build-version.outputs.BUILD_VERSION }} PLATFORMS='linux/amd64 linux/arm64'
 
       - name: Build TarsFramework Chart
-        run: make chart.framework CHART_VERSION=${{ steps.chart-version.outputs.CHART_VERSION }} BUILD_VERSION=${{ steps.build-version.outputs.BUILD_VERSION }}
+        run: make chart.framework CHART_VERSION=${{ steps.chart-version.outputs.CHART_VERSION }} BUILD_VERSION=${{ steps.build-version.outputs.BUILD_VERSION }} PLATFORMS='linux/amd64 linux/arm64'
 
       - name: Helm Index
         run: helm repo index charts --url https://tarscloud.github.io/K8SFramework/charts
