fix cmakelist add AdminRegistryServer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ include_directories(./LibESClient/)
 add_subdirectory(ConfigServer)
 add_subdirectory(NodeServer)
 add_subdirectory(NotifyServer)
+add_subdirectory(AdminRegistryServer)
 add_subdirectory(RegistryServer)
 add_subdirectory(PropertyServer)
 add_subdirectory(StatServer)
