fix tars-tarsadminregistry.yaml server: tarsAdminRegistry

--- a/helm/tarsframework/templates/tars-tarsadminregistry.yaml
+++ b/helm/tarsframework/templates/tars-tarsadminregistry.yaml
@@ -63,7 +63,7 @@ metadata:
     tars.io/Template: tars.es
 spec:
   app: tars
-  server: tarsadminregistry
+  server: tarsAdminRegistry
   subType: tars
   tars:
     template: tars.cpp
