Fix: kubeVersion: kubeVersion: ">= 1.17.0-alpha <= 1.24.0-alpha" to support some k8s version with pre

--- a/helm/tarscontroller/Chart.yaml
+++ b/helm/tarscontroller/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: tarscontroller
 version: _CHART_VERSION_
-kubeVersion: ">= 1.17.0 <= 1.24.0"
+kubeVersion: ">= 1.17.0-alpha <= 1.24.0-alpha"
 type: application
-keywords: [ tars ,tarscontroller ]
+keywords: [tars, tarscontroller]
 appVersion: _CHART_APPVERSION_
