fix: tars-tarsweb tplugins auth

--- a/helm/tarsframework/templates/tars-tarsregistry.yaml
+++ b/helm/tarsframework/templates/tars-tarsregistry.yaml
@@ -18,7 +18,7 @@ rules:
     resources: [ configmaps ]
     verbs: [ get,list,watch ]
   - apiGroups: [ k8s.tars.io ]
-    resources: [ ttemplates,tendpoints,tframeworkconfigs ]
+    resources: [ ttemplates,tendpoints,tframeworkconfigs,tplugins ]
     verbs: [ get ,list, watch ]
 ---
 
