--- a/helm/tarsframework/templates/tars-tarskevent.yaml
+++ b/helm/tarsframework/templates/tars-tarskevent.yaml
@@ -88,6 +88,8 @@ spec:
   release:
     id: {{.Values.framework.tag }}
     image: "{{.Values.framework.registry }}/tars.tarskevent:{{.Values.framework.tag}}"
+    nodeImage: "{{.Values.framework.registry }}/tars.tarsnode:{{.Values.framework.tag}}"
     {{- if.Values.framework.secret}}
     secret: {{.Values.framework.secret |quote }}
+    nodeSecret: {{.Values.framework.secret |quote }}
     {{- end}}
