--- a/helm/tarsframework/templates/tars-tarslog.yaml
+++ b/helm/tarsframework/templates/tars-tarslog.yaml
@@ -87,6 +87,8 @@ spec:
   release:
     id: {{.Values.framework.tag | quote }}
     image: "{{.Values.framework.registry }}/tars.tarslog:{{.Values.framework.tag}}"
+    nodeImage: "{{.Values.framework.registry }}/tars.tarsnode:{{.Values.framework.tag}}"
     {{- if.Values.framework.secret}}
     secret: {{.Values.framework.secret |quote }}
+    nodeSecret: {{.Values.framework.secret |quote }}
     {{- end}}
