--- a/helm/tarsframework/templates/tars-tarsproperty.yaml
+++ b/helm/tarsframework/templates/tars-tarsproperty.yaml
@@ -69,6 +69,8 @@ spec:
   release:
     id: {{.Values.framework.tag | quote }}
     image: "{{.Values.framework.registry }}/tars.tarsproperty:{{.Values.framework.tag}}"
+    nodeImage: "{{.Values.framework.registry }}/tars.tarsnode:{{.Values.framework.tag}}"
     {{- if.Values.framework.secret}}
     secret: {{.Values.framework.secret |quote }}
+    nodeSecret: {{.Values.framework.secret |quote }}
     {{- end}}
