--- a/helm/tarsframework/templates/tars-tarsstat.yaml
+++ b/helm/tarsframework/templates/tars-tarsstat.yaml
@@ -66,6 +66,8 @@ spec:
   release:
     id: {{.Values.framework.tag | quote }}
     image: "{{.Values.framework.registry }}/tars.tarsstat:{{.Values.framework.tag}}"
+    nodeImage: "{{.Values.framework.registry }}/tars.tarsnode:{{.Values.framework.tag}}"
     {{- if.Values.framework.secret}}
     secret: {{.Values.framework.secret |quote }}
+    nodeSecret: {{.Values.framework.secret |quote }}
     {{- end}}
