static link libgcc and libstdc++

--- a/src/NodeServer/CMakeLists.txt
+++ b/src/NodeServer/CMakeLists.txt
@@ -4,4 +4,4 @@ gen_server(tars tarsnode)
 
 add_dependencies(tarsnode tarsregistry)
 
-target_link_libraries(tarsnode)
+target_link_libraries(tarsnode -static-libgcc -static-libstdc++)
