add resource limit for tarsweb

--- a/helm/tarsframework/templates/tars-tarsweb.yaml
+++ b/helm/tarsframework/templates/tars-tarsweb.yaml
@@ -123,6 +123,11 @@ spec:
           fieldRef:
             fieldPath: metadata.name
     replicas: 1
+    resources:
+      limits:
+        memory: 2G
+      requests:
+        memory: 2G
     mounts:
       - name: host-log-dir
         source:
