set deprecated flag

--- a/helm/tarscontroller/crds/TConfig.yaml
+++ b/helm/tarscontroller/crds/TConfig.yaml
@@ -18,6 +18,8 @@ spec:
     - name: v1beta1
       served: _V1BETA1_SERVED_
       storage: _V1BETA1_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta1 TConfig is deprecated; please migrate to k8s.tars.io/v1beta3 TConfig"
       schema:
         openAPIV3Schema:
           type: object
@@ -81,6 +83,8 @@ spec:
     - name: v1beta2
       served: _V1BETA2_SERVED_
       storage: _V1BETA2_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta2 TConfig is deprecated; please migrate to k8s.tars.io/v1beta3 TConfig"
       schema:
         openAPIV3Schema:
           type: object
