--- a/helm/tarscontroller/crds/TFrameworkConfig.yaml
+++ b/helm/tarscontroller/crds/TFrameworkConfig.yaml
@@ -26,6 +26,8 @@ spec:
     - name: v1beta2
       served: _V1BETA2_SERVED_
       storage: _V1BETA2_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta1 TFrameworkConfig is deprecated; please migrate to k8s.tars.io/v1beta3 TFrameworkConfig"
       schema:
         openAPIV3Schema:
           type: object
@@ -115,6 +117,8 @@ spec:
     - name: v1beta3
       served: _V1BETA3_SERVED_
       storage: _V1BETA3_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta2 TFrameworkConfig is deprecated; please migrate to k8s.tars.io/v1beta3 TFrameworkConfig"
       schema:
         openAPIV3Schema:
           type: object
