--- a/helm/tarscontroller/crds/TTree.yaml
+++ b/helm/tarscontroller/crds/TTree.yaml
@@ -16,6 +16,8 @@ spec:
     - name: v1beta1
       served: _V1BETA1_SERVED_
       storage: _V1BETA1_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta1 TTree is deprecated; please migrate to k8s.tars.io/v1beta3 TTree"
       schema:
         openAPIV3Schema:
           type: object
@@ -73,6 +75,8 @@ spec:
     - name: v1beta2
       served: _V1BETA2_SERVED_
       storage: _V1BETA2_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta2 TTree is deprecated; please migrate to k8s.tars.io/v1beta3 TTree"
       schema:
         openAPIV3Schema:
           type: object
