--- a/helm/tarscontroller/crds/TAccount.yaml
+++ b/helm/tarscontroller/crds/TAccount.yaml
@@ -17,6 +17,8 @@ spec:
     - name: v1beta1
       served: _V1BETA1_SERVED_
       storage: _V1BETA1_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta1 TAccount is deprecated; please migrate to k8s.tars.io/v1beta3 TAccount"
       schema:
         openAPIV3Schema:
           type: object
@@ -94,6 +96,8 @@ spec:
     - name: v1beta2
       served: _V1BETA2_SERVED_
       storage: _V1BETA2_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta2 TAccount is deprecated; please migrate to k8s.tars.io/v1beta3 TAccount"
       schema:
         openAPIV3Schema:
           type: object
