--- a/helm/tarscontroller/crds/TExitedRecord.yaml
+++ b/helm/tarscontroller/crds/TExitedRecord.yaml
@@ -16,6 +16,8 @@ spec:
     - name: v1beta1
       served: _V1BETA1_SERVED_
       storage: _V1BETA1_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta1 TExitedRecord is deprecated; please migrate to k8s.tars.io/v1beta3 TExitedRecord"
       schema:
         openAPIV3Schema:
           type: object
@@ -48,6 +50,8 @@ spec:
     - name: v1beta2
       served: _V1BETA2_SERVED_
       storage: _V1BETA2_STORAGE_
+      deprecated: true
+      deprecationWarning: "k8s.tars.io/v1beta2 TExitedRecord is deprecated; please migrate to k8s.tars.io/v1beta3 TExitedRecord"
       schema:
         openAPIV3Schema:
           type: object
