set tarsnode log level to debug

--- a/context/tarsnode/root/tarsnode/conf/background.conf
+++ b/context/tarsnode/root/tarsnode/conf/background.conf
@@ -33,7 +33,7 @@
 			basepath=/usr/local/app/tars/tarsnode/bin/
 			datapath=/usr/local/app/tars/tarsnode/data/
 			logpath=/usr/local/app/tars/app_log
-			logLevel=ERROR
+			logLevel=DEBUG
 			<NodeAdapter>
 				endpoint=tcp -h _LISTEN_ADDRESS_ -p 19385 -t 60000
 				allow
