--- a/context/tarsnode/root/tarsnode/conf/foreground.conf
+++ b/context/tarsnode/root/tarsnode/conf/foreground.conf
@@ -33,7 +33,7 @@
 			basepath=/usr/local/app/tars/tarsnode/bin/
 			datapath=/usr/local/app/tars/tarsnode/data/
 			logpath=/usr/local/app/tars/app_log
-			logLevel=ERROR
+			logLevel=DEBUG
 			<ServerAdapter>
 				endpoint=tcp -h 127.0.0.1 -p 19386 -t 60000
 				allow
