--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-18.04, ubuntu-20.04]
+        platform: [ubuntu-20.04]
         cli: [docker]
     runs-on: ${{matrix.platform}}
     timeout-minutes: 90
